# -Mini-DBMS-

./: .gitignore  CMakeLists.txt  README.md
docs/: AI_PROJECT_CONTEXT.md  AI_PROMPT_TEMPLATES.md  AI_USAGE_LOG.md  ARCHITECTURE.md  INDEX_DESIGN.md  PROJECT_SPEC.md  STORAGE_FORMAT.md  TEST_COVERAGE_PHASE8.md  TEST_LOG.md
include/common/: dynamic_array.h  hash_table.h  linked_list.h  status.h  string_utils.h
include/executor/: executor.h
include/index/: bplus_tree_index.h
include/network/: protocol.h
include/sql/: command.h  lexer.h  parser.h  token.h
include/storage/: storage_engine.h
include/testing/: test_framework.h
scripts/: e2e_acceptance.sh  manual_demo.sh
src/client/: db_client.cpp
src/executor/: executor.cpp
src/index/: bplus_tree_index.cpp
src/network/: protocol.cpp
src/server/: db_server.cpp
src/sql/: lexer.cpp  parser.cpp
src/storage/: storage_engine.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/common/: dynamic_array_test.cpp  hash_table_test.cpp  linked_list_test.cpp  status_test.cpp  string_utils_test.cpp
tests/executor/: executor_test.cpp
tests/index/: bplus_tree_index_test.cpp
tests/network/: protocol_test.cpp
tests/sql/: parser_test.cpp
tests/storage/: storage_engine_test.cpp
